include/wx/osx/cocoa/private/textimpl.h
@@ -45,6 +45,8 @@ public :
     virtual bool SetHint(const wxString& hint);
 
     virtual void controlAction(WXWidget slf, void* _cmd, void *sender);
+    virtual bool becomeFirstResponder(WXWidget slf, void *_cmd);
+    virtual bool resignFirstResponder(WXWidget slf, void *_cmd);
 
 protected :
     NSTextField* m_textField;
